# rocket-desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
autostart/: rocket-notifications.desktop  rocket-panel.desktop  rocket-power.desktop  rocket-wallpaper.desktop
config/default/: appearance.conf  rocket.conf
config/systemd/user/: rocket-clipboard.service  rocket-notifications.service  rocket-panel.service  rocket-screenshot.service  rocket-session.target  rocket-shell.service  rocket-wallpaper.service
kwin-effects/rocket-animations/: metadata.json
kwin-effects/rocket-animations/contents/ui/: main.qml
kwin-scripts/rocket-tiling/: metadata.json
kwin-scripts/rocket-tiling/contents/code/: main.js
kwin-scripts/rocket-tiling/contents/config/: main.xml
qml/clipboard/: ClipboardHistory.qml
qml/common/: Theme.qml  qmldir
qml/launcher/: Launcher.qml
qml/notifications/: NotificationPopup.qml
qml/overview/: Overview.qml
qml/panel/: Panel.qml
qml/settings/: SettingsWindow.qml
qml/wallpaper/: WallpaperRenderer.qml
scripts/: install.sh  launch.sh  rocket-helper  rocket-install  rocket-launcher  rocket-learn  rocket-remove  rocket-session  rocket-settings  rocket-setup  rocket-shortcuts  rocket-style  rocket-system  rocket-trigger  rocket-tui-audio  rocket-tui-bluetooth  rocket-tui-power  rocket-tui-system  rocket-tui-wifi  rocket-update  rocketctl  select-session  session.sh
session/: rocket-desktop.desktop
src/: CMakeLists.txt  main.cpp  resources.qrc
src/clipboard/: history_window.cpp  history_window.h  manager.cpp  manager.h
src/common/: dbus_paths.h  wayland_helpers.cpp  wayland_helpers.h
src/core/: config_manager.cpp  config_manager.h  dbus_service.cpp  dbus_service.h  session.cpp  session.h  shell.cpp  shell.h
src/launcher/: app_database.cpp  app_database.h  launcher_window.cpp  launcher_window.h
src/notifications/: daemon.cpp  daemon.h  popup.cpp  popup.h
src/overview/: overview_window.cpp  overview_window.h
src/panel/: panel_window.cpp  panel_window.h
src/panel/widgets/: clock.cpp  clock.h  status_area.cpp  status_area.h  system_tray.cpp  system_tray.h  taskbar.cpp  taskbar.h  workspace_indicator.cpp  workspace_indicator.h
src/power/: power_manager.cpp  power_manager.h
src/screenshot/: screenshot_tool.cpp  screenshot_tool.h
src/settings/: settings_window.cpp  settings_window.h
src/wallpaper/: renderer.cpp  renderer.h
uwsm/: rocket.sh
